--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FW-FAQ</title>
+    <title>FAQ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -16,7 +16,7 @@
     
       <section class="py-20"><div class="container px-4 mx-auto">
           <div class="mb-16 text-center">
-            <span class="ext-sm text-gray-200 uppercase">SERVER NAME</span>
+            <span class="ext-sm text-gray-200 uppercase">My Life Be Like</span>
             <h2 class="mt-2 text-4xl lg:text-5xl font-bold font-heading">FAQs</h2>
           </div>
           <div class="flex flex-wrap -mx-4 -mb-8">
